Changement de la logique de gestion des entrées et sorties d'argent.